reductie van DbAccessIF
git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWOProject/DWO-LMS/DWOJClient/trunk@19884 58dd2db4-0f11-0410-9df4-da15f00f50bd